manifests/service-jekyll.yaml
apiVersion: v1
kind: Service
metadata:
  name: jekyll-blog
  namespace: apps
spec:
  selector:
    app: jekyll-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
